# goose-eggs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  renovate.json
.github/workflows/: CI.yml
examples/umami/: README.md  admin.rs  common.rs  english.rs  main.rs  spanish.rs
src/: drupal.rs  lib.rs  text.rs
tests/: parse.rs  validate.rs
