[package]
name = "goose-eggs"
version = "0.2.1-dev"
authors = ["Jeremy Andrews <jeremy@tag1.com>"]
edition = "2018"
description = "Helpful in writing Goose load tests."
homepage = "https://goose.rs"
documentation = "https://docs.rs/goose-eggs"
repository = "https://github.com/tag1consulting/goose-eggs"
readme = "README.md"
keywords = ["loadtesting", "performance", "web"]
license = "Apache-2.0"

[dependencies]
goose = "0.14"
log = "0.4"
rand = "0.8"
regex = "1.5"
reqwest = "0.11"
tokio = "1"
