[package]
name = "goose-eggs"
version = "0.6.0"
authors = ["Jeremy Andrews <jeremy@tag1.com>"]
edition = "2018"
description = "Helpful in writing Goose load tests."
homepage = "https://goose.rs"
documentation = "https://docs.rs/goose-eggs"
repository = "https://github.com/tag1consulting/goose-eggs"
readme = "README.md"
keywords = ["loadtesting", "performance", "web"]
license = "Apache-2.0"

[dependencies]
goose = { version = "0.18", default-features = false }
html-escape = "0.2"
http = "1.1"
log = "0.4"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1", features = [ "macros" ] }

[features]
default = ["goose/default", "reqwest/default-tls"]
rustls-tls = ["goose/rustls-tls", "reqwest/rustls-tls"]

[dev-dependencies]
gumdrop = "0.8"
httpmock = "0.7"
